test/invalidImports/a.ts
import {c1, b2} from "./b";
import {b1, c2} from './c';

console.log(c1, b2, b1, c2);

export const a1 = 'a1';
export const a2 = 'a2';
